--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "SaveMoney+",
+  "name": "Depozy",
   "short_name": "App",
   "start_url": ".",
   "display": "standalone",
@@ -7,8 +7,8 @@
   "theme_color": "#F7F7F7",
   "icons": [
     {
-      "src": "/icons/196.png",
-      "sizes": "196x196",
+      "src": "/icons/192.png",
+      "sizes": "192x192",
       "type": "image/png"
     },
     {
