--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@xmldom/xmldom": "^0.9.5",
     "epubjs": "^0.3.93",
     "framer-motion": "^11.18.2",
+    "i18next": "^25.5.2",
+    "i18next-browser-languagedetector": "^8.2.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-i18next": "^16.0.0",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
     "styled-components": "^6.1.11",
